--- a/index.html
+++ b/index.html
@@ -171,7 +171,7 @@
         <div>
             &copy;copyright 2022
             <p>
-                Designed by Sonika
+                Designed by Robin
             </p>
         </div>
     </footer>
